--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -77,7 +77,7 @@
     color: $dark-color;
     .process {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
       grid-gap: 1.5rem;
       text-align: center;
 
